--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -18,4 +18,5 @@
 @import 'layout/formularios';
 
 /*Paginas Internas*/
-@import 'internas/nostros'
+@import 'internas/nostros';
+@import 'internas/admin';
