--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -15,6 +15,7 @@ $verde: #71B100;
 $blanco: #FFFFFF;
 $gris: #e1e1e1;
 $grisOscuro: #333333;
+$rojo: rgb(211, 3, 3);
 
 $separacion: 5rem;
 
@@ -22,4 +23,4 @@ $separacion: 5rem;
 $delgada: 300;
 $regular : 400;
 $bold: 700;
-$black: 900
+$black: 900;
